--- a/NissenNutrition/index.html
+++ b/NissenNutrition/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -27,10 +28,18 @@
 		<a href="#Appointments-Online">Online Appointment</a>
 	</div>
 
-    <div class="grid-itemBot"></div>
-    <div class="grid-itemBot"></div>  
-    <div class="grid-itemBot"></div>
-    <div class="grid-itemBot"></div> 
+    <div class="grid-itemBot"><u>About Us</u>
+        <br>
+        <a href="#Us">Us</a>
+        <br>
+        <a href="#FAQ">FAQ</a>
+        <br>
+        <a href="#Contact">Contact</a>
+
+    </div>
+    <div class="grid-itemBot">
+       <a href="https://www.instagram.com/nissennutrition/" class="fa fa-instagram"></a> <a href="#" class="fa fa-facebook"></a>
+    </div> 
 </div>
 
 
