--- a/NissenNutrition/Appointments.html
+++ b/NissenNutrition/Appointments.html
@@ -4,7 +4,6 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
-<link href="css/index.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -13,17 +12,12 @@
 
 <div class="grid-container">
     <div class="grid-item grid-logo"><img class="logo" src="images/NN LogoCropped.jpeg" alt="Logo"></div>
-    <div class="grid-item"><a href="#ContactUs">Contact Us</a></div>
+    <div class="grid-item"><a class="active" href="#ContactUs">Contact Us</a></div>
     <div class="grid-item"><a href="#Appointments">Appointments</a></div>  
     <div class="grid-item"><a href="#Recipes">Recipes</a></div>
-    <div class="grid-item"><a href="/DynamicWebsites/NissenNutrition/AboutUs.html">About Us</a></div> 
+    <div class="grid-item"><a href="#about">About Us</a></div> 
 </div>
 
-<br>
-
-<div class="Home-Logo"><img class="homeLogo" src="images/HomePageLogo.jpeg" alt="NN Logo"></div>
-
-<div class="Slogan"><p>Creating Habits, Not Restrictions</p></div>
 
 <div class="grid-bottom">
     <div class="grid-itemBot TakeAction"><u>Take Action</u>
@@ -35,7 +29,7 @@
 
     <div class="grid-itemBot"><u>About Us</u>
         <br>
-        <a href="#Us">Who we are</a>
+        <a href="#Us">Us</a>
         <br>
         <a href="#FAQ">FAQs</a>
         <br>
