--- a/NissenNutrition/index.html
+++ b/NissenNutrition/index.html
@@ -26,15 +26,13 @@
 <div class="Slogan"><p>Creating Habits, Not Restrictions</p></div>
 
 <div class="grid-bottom">
-    <div class="grid-itemBot TakeAction"><u>Take Action</u>
-		<br>
+    <div class="grid-itemBot TakeAction"><h3 class="UnderLine">Take Action</h3>
 		<a href="#Appointments-InPerson">In Person Appointment</a>
 		<br>
 		<a href="#Appointments-Online">Online Appointment</a>
 	</div>
 
-    <div class="grid-itemBot"><u>About Us</u>
-        <br>
+    <div class="grid-itemBot"><h3 class="UnderLine">About Us</h3>
         <a href="#Us">Who we are</a>
         <br>
         <a href="#FAQ">FAQs</a>
