--- a/NissenNutrition/index.html
+++ b/NissenNutrition/index.html
@@ -14,9 +14,9 @@
 <div class="grid-container">
     <div class="grid-item grid-logo"><img class="logo" src="images/NN LogoCropped.jpeg" alt="Logo"></div>
     <div class="grid-item"><a href="#ContactUs">Contact Us</a></div>
-    <div class="grid-item"><a href="#Appointments">Appointments</a></div>  
+    <div class="grid-item"><a href="Appointments.html">Appointments</a></div>  
     <div class="grid-item"><a href="#Recipes">Recipes</a></div>
-    <div class="grid-item"><a href="/DynamicWebsites/NissenNutrition/AboutUs.html">About Us</a></div> 
+    <div class="grid-item"><a href="AboutUs.html">About Us</a></div> 
 </div>
 
 <br>
