--- a/NissenNutrition/Appointments.html
+++ b/NissenNutrition/Appointments.html
@@ -12,10 +12,10 @@
 
 <div class="grid-container">
     <div class="grid-item grid-logo"><img class="logo" src="images/NN LogoCropped.jpeg" alt="Logo"></div>
-    <div class="grid-item"><a class="active" href="#ContactUs">Contact Us</a></div>
-    <div class="grid-item"><a href="#Appointments">Appointments</a></div>  
+    <div class="grid-item"><a href="#ContactUs">Contact Us</a></div>
+    <div class="grid-item"><a href="Appointments.html">Appointments</a></div>  
     <div class="grid-item"><a href="#Recipes">Recipes</a></div>
-    <div class="grid-item"><a href="#about">About Us</a></div> 
+    <div class="grid-item"><a href="AboutUs.html">About Us</a></div> 
 </div>
 
 
