--- a/NissenNutrition/Appointments.html
+++ b/NissenNutrition/Appointments.html
@@ -11,11 +11,11 @@
 <body>
 
 <div class="grid-container">
-    <div class="grid-item grid-logo"><img class="logo" src="images/NN LogoCropped.jpeg" alt="Logo"></div>
-    <div class="grid-item"><a href="#ContactUs">Contact Us</a></div>
-    <div class="grid-item"><a href="Appointments.html">Appointments</a></div>  
-    <div class="grid-item"><a href="#Recipes">Recipes</a></div>
-    <div class="grid-item"><a href="AboutUs.html">About Us</a></div> 
+    <div class="grid-item grid-logo"><a class="linkLogo" href="index.html"><img class="logo" src="images/NN LogoCropped.jpeg" alt="Logo"></a></div>
+    <div class="grid-item"><a class="link" href="#ContactUs">Contact Us</a></div>
+    <div class="grid-item"><a class="link" href="Appointments.html">Appointments</a></div>  
+    <div class="grid-item"><a class="link" href="#Recipes">Recipes</a></div>
+    <div class="grid-item"><a class="link" href="AboutUs.html">About Us</a></div> 
 </div>
 
 
@@ -35,6 +35,8 @@
 
     </div>
     <div class="grid-itemBot">
+        <br>
+        <br>
        <a href="https://www.instagram.com/nissennutrition/" class="fa fa-instagram"></a> <a href="#" class="fa fa-facebook"></a>
     </div> 
 </div>
