--- a/NissenNutrition/ContactUs.html
+++ b/NissenNutrition/ContactUs.html
@@ -4,7 +4,7 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
-<link href="css/index.css" rel="stylesheet" type="text/css">
+<link href="css/ContactUs.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -13,17 +13,35 @@
 
 <div class="grid-container">
     <div class="grid-item grid-logo"><a class="linkLogo" href="index.html"><img class="logo" src="images/NN LogoCropped.jpeg" alt="Logo"></a></div>
-    <div class="grid-item"><a class="link" href="ContactUs.html">Contact Us</a></div>
+    <div class="grid-item"><a class="link active" href="ContactUs.html">Contact Us</a></div>
     <div class="grid-item"><a class="link" href="Appointments.html">Appointments</a></div>  
     <div class="grid-item"><a class="link" href="Recipes.html">Recipes</a></div>
     <div class="grid-item"><a class="link" href="AboutUs.html">About Us</a></div> 
 </div>
-
 <br>
-
-<div class="Home-Logo"><img class="homeLogo" src="images/HomePageLogo.jpeg" alt="NN Logo"></div>
-
-<div class="Slogan"><p>Creating Habits, Not Restrictions</p></div>
+<br>
+<div class="Message"><h1>We would love to hear from you!</h1></div>
+<div class="container">
+    <form action="/action_page.php">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+  
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+  
+      <label for="country">Country</label>
+      <select id="country" name="country">
+        <option value="australia">Mexico</option>
+        <option value="canada">Canada</option>
+        <option value="usa">USA</option>
+      </select>
+  
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+  
+      <input type="submit" value="Submit">
+    </form>
+  </div>
 
 <div class="grid-bottom">
     <div class="grid-itemBot TakeAction"><h3 class="UnderLine">Take Action</h3>
