--- a/NissenNutrition/Recipes.html
+++ b/NissenNutrition/Recipes.html
@@ -4,7 +4,7 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
-<link href="css/index.css" rel="stylesheet" type="text/css">
+<link href="css/recipes.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -15,15 +15,11 @@
     <div class="grid-item grid-logo"><a class="linkLogo" href="index.html"><img class="logo" src="images/NN LogoCropped.jpeg" alt="Logo"></a></div>
     <div class="grid-item"><a class="link" href="ContactUs.html">Contact Us</a></div>
     <div class="grid-item"><a class="link" href="Appointments.html">Appointments</a></div>  
-    <div class="grid-item"><a class="link" href="Recipes.html">Recipes</a></div>
+    <div class="grid-item"><a class="link active" href="Recipes.html">Recipes</a></div>
     <div class="grid-item"><a class="link" href="AboutUs.html">About Us</a></div> 
 </div>
 
 <br>
-
-<div class="Home-Logo"><img class="homeLogo" src="images/HomePageLogo.jpeg" alt="NN Logo"></div>
-
-<div class="Slogan"><p>Creating Habits, Not Restrictions</p></div>
 
 <div class="grid-bottom">
     <div class="grid-itemBot TakeAction"><h3 class="UnderLine">Take Action</h3>
