--- a/NissenNutrition/AboutUs.html
+++ b/NissenNutrition/AboutUs.html
@@ -14,10 +14,10 @@
 
 <div class="grid-container">
     <div class="grid-item grid-logo"><a class="linkLogo" href="index.html"><img class="logo" src="images/NN LogoCropped.jpeg" alt="Logo"></a></div>
-    <div class="grid-item"><a class="link" href="#ContactUs">Contact Us</a></div>
+    <div class="grid-item"><a class="link" href="ContactUs.html">Contact Us</a></div>
     <div class="grid-item"><a class="link" href="Appointments.html">Appointments</a></div>  
-    <div class="grid-item"><a class="link" href="#Recipes">Recipes</a></div>
-    <div class="grid-item"><a class="link" href="AboutUs.html">About Us</a></div> 
+    <div class="grid-item"><a class="link" href="Recipes.html">Recipes</a></div>
+    <div class="grid-item"><a class="link active" href="AboutUs.html">About Us</a></div> 
 </div>
 
 <div class="InfoUs">
