--- a/NissenNutrition/InPerson.html
+++ b/NissenNutrition/InPerson.html
@@ -4,7 +4,7 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="css/main.css" rel="stylesheet" type="text/css">
-<link href="css/index.css" rel="stylesheet" type="text/css">
+<link href="css/inPerson.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -21,9 +21,42 @@
 
 <br>
 
-<div class="Home-Logo"><img class="homeLogo" src="images/HomePageLogo.jpeg" alt="NN Logo"></div>
+<div class="Title"><h1>In-person Appointment</h1></div>
 
-<div class="Slogan"><p>Creating Habits, Not Restrictions</p></div>
+
+<div class="holder">
+    <div class="option">
+        <div class="imgHolder"><img src="images/ConsultaPrimera.jpeg" alt="FirstAppointment"></img></div>
+        <div class="text">
+            <p><b>First Time Appointment</b><br> Session Time: 1 hour 30 min aprox. <br> </p>
+            <a class="ReadMore" href="FirsTimeReadMore.html">Read More</a>      
+        </div>
+        <br><br><br>
+        <div class="Reserve"><a href="FirsTimeReadMore.html" class="Reserve">Schedule Now</a></div>
+    </div>
+
+    <div class="option">
+        <div class="imgHolder"><img src="images/Paquetes.jpeg" alt="Packs"></img></div>
+        <div class="text">
+            <p><b>Packs</b> </p>
+            <a class="ReadMore" href="PacksReadMore.html">Read More</a>      
+        </div>
+        <br><br>
+        <div class="Reserve"><a href="PacksReadMore.html" class="Reserve">Schedule Now</a></div>
+    </div>
+
+    <div class="option">
+        <div class="imgHolder"><img src="images/ConsultaSubs.jpeg" alt="FollowUpAppointment"></img></div>
+        <div class="text">
+            <p><b>Follow Up Appointment</b><br> Session Time: 1 hour aprox. <br> </p>
+            <a class="ReadMore" href="FollowUpReadMore.html">Read More</a>      
+        </div>
+        <br><br><br>
+        <div class="Reserve"><a href="FollowUpReadMore.html" class="Reserve">Schedule Now</a></div>
+    </div>  
+</div>
+
+
 
 <div class="grid-bottom">
     <div class="grid-itemBot TakeAction"><h3 class="UnderLine">Take Action</h3>
