--- a/NissenNutrition/Appointments.html
+++ b/NissenNutrition/Appointments.html
@@ -21,13 +21,13 @@
 
 <div class="grid-bottom">
     <div class="grid-itemBot TakeAction"><h3 class="UnderLine">Take Action</h3>
-		<a href="#Appointments-InPerson">In Person Appointment</a>
+		<a href="InPerson.html">In Person Appointment</a>
 		<br>
 		<a href="#Appointments-Online">Online Appointment</a>
 	</div>
 
     <div class="grid-itemBot"><h3 class="UnderLine">About Us</h3>
-        <a href="#Us">Who we are</a>
+        <a href="#Us">Who We Are</a>
         <br>
         <a href="#FAQ">FAQs</a>
         <br>
