--- a/NissenNutrition/ContactUs.html
+++ b/NissenNutrition/ContactUs.html
@@ -28,7 +28,10 @@
   
       <label for="lname">Last Name</label>
       <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-  
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="mail" placeholder="Your Email..">
+      
       <label for="country">Country</label>
       <select id="country" name="country">
         <option value="australia">Mexico</option>
@@ -45,14 +48,14 @@
 
 <div class="grid-bottom">
     <div class="grid-itemBot TakeAction"><h3 class="UnderLine">Take Action</h3>
-		<a href="#Appointments-InPerson">In Person Appointment</a>
-		<br>
+      <a href="InPerson.html">In Person Appointment</a>
+      <br>
 		<a href="#Appointments-Online">Online Appointment</a>
 	</div>
 
     <div class="grid-itemBot"><h3 class="UnderLine">About Us</h3>
-        <a href="#Us">Who we are</a>
-        <br>
+      <a href="#Us">Who We Are</a>
+      <br>
         <a href="#FAQ">FAQs</a>
         <br>
         <a href="#Contact">Contact</a>
