--- a/NissenNutrition/Recipes.html
+++ b/NissenNutrition/Recipes.html
@@ -33,7 +33,7 @@
         <br>
         <a href="#FAQ">FAQs</a>
         <br>
-        <a href="#Contact">Contact</a>
+        <a href="ContactUs.html">Contact</a>
 
     </div>
     <div class="grid-itemBot">
