--- a/NissenNutrition/Appointments.html
+++ b/NissenNutrition/Appointments.html
@@ -31,7 +31,7 @@
         <br>
         <a href="#FAQ">FAQs</a>
         <br>
-        <a href="#Contact">Contact</a>
+        <a href="ContactUs.html">Contact</a>
 
     </div>
     <div class="grid-itemBot">
