--- a/NissenNutrition/ContactUs.html
+++ b/NissenNutrition/ContactUs.html
@@ -58,7 +58,7 @@
       <br>
         <a href="#FAQ">FAQs</a>
         <br>
-        <a href="#Contact">Contact</a>
+        <a href="ContactUs.html">Contact</a>
 
     </div>
     <div class="grid-itemBot">
