--- a/NissenNutrition/InPerson.html
+++ b/NissenNutrition/InPerson.html
@@ -70,7 +70,7 @@
         <br>
         <a href="#FAQ">FAQs</a>
         <br>
-        <a href="#Contact">Contact</a>
+        <a href="ContactUs.html">Contact</a>
 
     </div>
     <div class="grid-itemBot">
