--- a/NissenNutrition/index.html
+++ b/NissenNutrition/index.html
@@ -15,7 +15,7 @@
     <div class="grid-item grid-logo"><a class="linkLogo" href="index.html"><img class="logo" src="images/NN LogoCropped.jpeg" alt="Logo"></a></div>
     <div class="grid-item"><a class="link" href="ContactUs.html">Contact Us</a></div>
     <div class="grid-item"><a class="link" href="Appointments.html">Appointments</a></div>  
-    <div class="grid-item"><a class="link" href="Recipes.html">Recipes</a></div>
+    <div class="grid-item"><a class="link" href="Recipes.php">Recipes</a></div>
     <div class="grid-item"><a class="link" href="AboutUs.html">About Us</a></div> 
 </div>
 
